--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						    <span class="blc">je suis</span>
 						    <span class="cd-words-wrapper">
 						        <b class="is-visible">Web Designer</b>
-						        <b>Developpeur web</b>
+						        <b>DevMobile App</b>
 								<b>Freelence</b>
 						    </span>
 				        </h2>
@@ -103,11 +103,13 @@
 										<i class="fa fa-linkedin" aria-hidden="true"></i>
 				        	    	</a>
 				        	    </li>
+						   <!--
 				        	    <li>
 				        	    	<a href="#" target="_blank">
 				        	    		<i class="fa fa-dribbble" aria-hidden="true"></i>
 				        	    	</a>
 				        	    </li>
+						  -->
 				        	    <li>
 				        	    	<a href="#" target="_blank">
 				        	    		<i class="fa fa-youtube" aria-hidden="true"></i>
@@ -650,7 +652,7 @@
 		<section id="copyright">
 			<div class="container">
 				<div class="copyright-detail">
-					<p>© 2021 Copyright By <a href="#" target="_blank">cctech coding & design</a></p>
+					<p>© 2021 Copyright With ❤ By <a href="#" target="_blank">cctech coding & design </a></p>
 				</div>
 			</div>
 		</section>
